--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           source: "docs/"
-          target: "${{secrets.TARGET}}"
+          target: ${{ secrets.TARGET }}
           
       # 上传到github page
       #- name: deploy
