--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           # 你要操作的目标仓库
-          TARGET_REPO: xiaoqiyamedia/note
+          TARGET_REPO: xiaoqiyamedia/xiaoqiyamedia.github.io
           # 构建结果存储的分支
           TARGET_BRANCH: gh_pages
           # 要使用的构建命令
